# CFG

./: Cargo.toml  README.md  bench.py  evals.sh  runall.sh
TC4/evals/: L1Gb.txt  L1cnf.txt  L2Gb.txt  L2cnf.txt  L3Gb.txt  L3cnf.txt  eval1_1.txt  eval1_2.txt  eval1_3.txt  eval2_1.txt  eval2_2.txt  eval2_3.txt  eval3_1.txt  eval3_2.txt  eval3_3.txt
TC4/tests/: a2.txt  a3.txt  in2_1.txt  in2_2.txt  in2_3.txt  in2_4.txt  in2_5.txt  in3_3.txt  sandesh.txt  tc1.txt  tc2.txt  tc3.txt
src/: cfg.rs  cnf.rs  lib.rs  main.rs  parser.rs  pda.rs  productionrule.rs  token.rs  trace.rs
tests/: custom_grammars.rs  test_parser.rs
