[package]
name = "tocp2"
version = "0.1.0"
edition = "2021"

[lib]
name = "cfg"
path = "src/lib.rs"

[[bin]]
name = "CFGDeriver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.1"
itertools = "0.12.0"
log = "0.4.20"
